--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -37,8 +37,30 @@ Notes:
 [float]
 ===== Features
 
-* Add "queryMaxLength" config variable to allow overriding the 10000 byte
-  default. ({issues}1921[#1921])
+* Add the `longFieldMaxLength` integer configuration option (default `10000`).
+  Specific transaction/span/error fields (see the list below) will be truncated
+  at this number of unicode characters. ({pull}2193[#2193], {issues}1921[#1921])
++
+  The `errorMessageMaxLength` configuration option is now *deprecated*, but
+  still supported. Users should switch to using `longFieldMaxLength. If
+  `errorMessageMaxLength` is not specified, truncation of error messages will
+  now use the `longFieldMaxLength` value.
++
+  Note that ultimately the maximum length of any tracing field is limited by the
+  {apm-server-ref-v}/configuration-process.html#max_event_size[`max_event_size`]
+  configured for the receiving APM server.
++
+  The fields affected by `longFieldMaxLength` are:
++
+** `transaction.context.request.body`, `error.context.request.body` - Before
+   this change these fields were not truncated.
+** `transaction.context.message.body`, `span.context.message.body`,
+   `error.context.message.body` - Before this change these fields were not
+   truncated.
+** `span.context.db.statement` - Before this change this field was truncated
+   at 10000 *bytes*. Truncation is now a number of unicode characters.
+** `error.exception.message`, `error.log.message` - Before this change, the
+   default 2kB `errorMessageMaxLength` would apply.
 
 * Improve the TypeScript types by exporting more of interfaces:
   `AgentConfigOptions`, `Transaction`, `Span`, `TransactionOptions`,
@@ -93,7 +115,7 @@ Notes:
 
 * Add instrumentation of the AWS SNS publish method when using the
   https://www.npmjs.com/package/aws-sdk[JavaScript AWS SDK v2] (`aws-sdk`). ({pull}2157[#2157])
-  
+
 [float]
 ===== Bug fixes
 
