fix: ensure metrics collection is actually disabled with metricsInterval=0s
Also guard against:
- `metricsInterval:null` resulting in metrics being enabled without any
  log message, which is perhaps slightly surprising.
- `metricsInterval:-1s` (any negative value) resulting in metrics being
  collected *as fast as possible* via
  `setInterval(collectAllTheMetrics, -1000)`.

An invalid value for this config var, and the other "POSTIVE_TIME_OPTS",
will result in (a) a log.warning and (b) falling back to the default
value.

A slight semantic change on the internal Metrics object means that the
`getOrCreate...()` metric functions now return undefined when metrics
are disabled via `metricsInterval`. This doesn't affect any public API.

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -948,15 +948,14 @@ it will be parsed out of the `/proc/self/cgroup` file.
 ==== `metricsInterval`
 
 * *Type:* String
-* *Default:* `30s`
+* *Default:* `"30s"`
 * *Env:* `ELASTIC_APM_METRICS_INTERVAL`
 
 Specify the interval for reporting metrics to APM Server.
 The interval should be in seconds,
 or should include a time suffix.
 
-To disable metrics reporting,
-set the interval to `0`.
+To disable metrics reporting, set the interval to `"0s"`.
 
 [[metrics-limit]]
 ==== `metricsLimit`
