--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -29,6 +29,13 @@ Notes:
 === Node.js Agent version 3.x
 
 
+==== Unreleased
+
+[float]
+===== Bug fixes
+
+* Fix pino's deprecation warning when using a custom logger with pino@6 ({issues}2332[#2332])
+
 [[release-notes-3.21.0]]
 ==== 3.21.0 2021/09/15
 
