fix: avoid import of any '@types/...' packages in types file (#2335)
This ensures that TypeScript users do not need to install separate
'@types/...' packages to build -- with the lone exception of
'@types/node'.

We avoid imports by instead inlining the required types. This is a
trade-off. We don't want '@types/...' in "dependencies" because they
can be big and aren't really "official" types for those packages.

Fixes: #2331

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -29,6 +29,23 @@ Notes:
 === Node.js Agent version 3.x
 
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+* Update types to avoid imports of `@types/...` modules (other than
+  `@types/node`), so that TypeScript users of elastic-apm-node need not
+  manually `npm install @types/connect @types/pino @types/aws-lambda` to
+  compile. ({issues}2331[#2331])
+
+
 [[release-notes-3.21.0]]
 ==== 3.21.0 2021/09/15
 
