--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,6 +40,10 @@ Notes:
 [float]
 ===== Bug fixes
 
+* <<span-to-string,`span.toString()`>> and <<transaction-to-string,`transaction.toString()`>>
+  have been *deprecated*. The exact string output may change in v4 of the
+  agent.
+
 * Improve `span.sync` determination (fixes {issue}1996[#1996]) and stop
   reporting `transaction.sync` which was never used ({issue}2292[#2292]).
   A minor semantic change is that `span.sync` is not set to a final value
