perf: only immediately flush *unhandled* captured errors
Avoid `agent.flush()` for *every* type of captured error, because a
frequently erroring service (e.g. one serving frequent HTTP 500 errors)
can make communication with APM server less efficient. Immediate
flushing of a captured error should only be necessary for an
'uncaughtException' because the app might crash immediately.

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -37,6 +37,13 @@ Notes:
 [float]
 ===== Features
 
+* When an error is captured, the APM agent will only immediately flush it to
+  APM server if it is an "unhandled" error. Unhandled errors are typically those
+  captured via the `uncaughtException` process event. Before this change, a
+  captured error (e.g. for a 4xx or 5xx response from an HTTP server) was
+  always immediately flushed. This could negatively impact performance for
+  a service that was generating *frequent* errors. ({issues}686[#686])
+
 [float]
 ===== Bug fixes
 
