--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -29,10 +29,8 @@ Notes:
 === Node.js Agent version 3.x
 
 
-==== Unreleased
-
-[float]
-===== Breaking changes
+[[release-notes-3.22.0]]
+==== 3.22.0 2021/10/21
 
 [float]
 ===== Features
