changelog and docs update for es client v8 support

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,6 +28,20 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+* Add initial support for version 8 of `@elastic/elasticsearch` (which is
+  still in pre-release).
+
+[float]
+===== Bug fixes
+
 
 [[release-notes-3.22.0]]
 ==== 3.22.0 2021/10/21
