only test fastify releases with the node versions that https://www.fastify.io/docs/latest/LTS/ says are supported for that major version

--- a/docs/fastify.asciidoc
+++ b/docs/fastify.asciidoc
@@ -121,6 +121,7 @@ include::./shared-set-up.asciidoc[tag=add-your-own-data]
 ==== Compatibility
 
 include::./shared-set-up.asciidoc[tag=compatibility-link]
+See also: https://www.fastify.io/docs/latest/LTS/[Fastify's own LTS documentation.]
 
 [float]
 [[fastify-troubleshooting]]
