fix: add changelog

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -41,6 +41,10 @@ Notes:
   https://github.com/elastic/apm/issues/509[helpful for APM Server log analysis].
   ({issues}2364[#2364])
 
+* In a Lambda enviornment we now collection a number of additional data fields
+  on the Transaction object.  See https://github.com/elastic/apm/blob/master/specs/agents/tracing-instrumentation-aws-lambda.md[spec for more information]
+  on fields collected. ({issues}2156[#2156])
+
 [float]
 ===== Bug fixes
 
