feat: exit spans, infer destination.service.resource
This adds the explicit concept of "exit spans" -- spans the represent an
outgoing call to a downstream service. An exit span doesn't have child
spans. (Technically it can have spans of the same type+subtype, but this
agent doesn't have any cases of that.) An exit span is explicitly marked
at creation time by setting the `exitSpan` option to true.
https://github.com/elastic/apm/blob/master/specs/agents/tracing-spans.md#exit-spans

For exit spans the 'span.context.destination.service.resource' is
automatically inferred from other context. This can be overriden with
the new `span.setDestinationService(resource)`.
https://github.com/elastic/apm/blob/master/specs/agents/tracing-spans-destination.md

Fixes: #2103

--- a/docs/agent-api.asciidoc
+++ b/docs/agent-api.asciidoc
@@ -638,6 +638,13 @@ Sub-millisecond precision can be achieved using decimals.
 If not provided,
 the current time will be used
 
+** `exitSpan` +{type-boolean}+ Make an "exit span".
+Exit spans represent outgoing communication. They are used to create a node
+in the {kibana-ref}/service-maps.html[Service Map] and a downstream service
+in the {kibana-ref}/dependencies.html[Dependencies Table]. The provided subtype
+will be used as the downstream service name, unless explicitly set via
+<<span-setdestinationservice,`span.setDestinationService`>>.
+
 Start and return a new custom span associated with the current active transaction.
 This is the same as getting the current transaction with `apm.currentTransaction` and,
 if a transaction was found,
